clean up log